# GenAI

./: 1_agent_loop_langchain_tool_calling.py  3_raw_react_prompt.py  README.md  ingestion_rag.py  main_custom_tool_tavily.py  main_helloworld.py  main_rag_retrival.py  main_tavily.py  pyproject.toml
